--- a/popup.html
+++ b/popup.html
@@ -4,55 +4,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ColorCheck</title>
+  <link rel="stylesheet" href="design.css">
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <div class="container">
+  <div class="popup-container" id="app">
+    <!-- Header -->
     <header class="header">
-      <h1>ColorCheck</h1>
-      <div class="format-toggle">
-        <button class="format-btn active" data-format="hex">HEX</button>
-        <button class="format-btn" data-format="rgb">RGB</button>
-        <button class="format-btn" data-format="hsl">HSL</button>
+      <div class="header-brand">
+        <img src="icons/icon32.png" alt="ColorCheck" class="header-logo">
+        <h1 class="gradient-text">ColorCheck</h1>
+      </div>
+      <div class="header-actions">
+        <button class="icon-btn" id="themeToggle" title="Toggle Dark Mode">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="12" cy="12" r="5"></circle>
+            <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"></path>
+          </svg>
+        </button>
+        <button class="icon-btn" id="openSettings" title="Settings">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="12" cy="12" r="3"></circle>
+            <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z"></path>
+          </svg>
+        </button>
       </div>
     </header>
 
-    <section class="palette-section">
+    <!-- Format Toggle -->
+    <div class="format-toggle">
+      <button class="format-btn active" data-format="hex">HEX</button>
+      <button class="format-btn" data-format="rgb">RGB</button>
+      <button class="format-btn" data-format="hsl">HSL</button>
+    </div>
+
+    <!-- Current Palette -->
+    <section class="section">
       <h2>Current Palette</h2>
       <div class="palette" id="currentPalette">
-        <div class="color-swatch" id="primarySwatch">
+        <div class="swatch" id="primarySwatch" data-role="primary">
           <div class="swatch-color"></div>
           <div class="swatch-info">
             <span class="swatch-label">Primary</span>
             <span class="swatch-value">--</span>
           </div>
-          <button class="copy-btn" title="Copy">
+          <button class="icon-btn favorite-btn" title="Add to favorites">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+            </svg>
+          </button>
+          <button class="icon-btn copy-btn" title="Copy">
             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
             </svg>
           </button>
         </div>
-        <div class="color-swatch" id="baseSwatch">
+        <div class="swatch" id="baseSwatch" data-role="base">
           <div class="swatch-color"></div>
           <div class="swatch-info">
             <span class="swatch-label">Base</span>
             <span class="swatch-value">--</span>
           </div>
-          <button class="copy-btn" title="Copy">
+          <button class="icon-btn favorite-btn" title="Add to favorites">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+            </svg>
+          </button>
+          <button class="icon-btn copy-btn" title="Copy">
             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
             </svg>
           </button>
         </div>
-        <div class="color-swatch" id="accentSwatch">
+        <div class="swatch" id="accentSwatch" data-role="accent">
           <div class="swatch-color"></div>
           <div class="swatch-info">
             <span class="swatch-label">Accent</span>
             <span class="swatch-value">--</span>
           </div>
-          <button class="copy-btn" title="Copy">
+          <button class="icon-btn favorite-btn" title="Add to favorites">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+            </svg>
+          </button>
+          <button class="icon-btn copy-btn" title="Copy">
             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
@@ -62,16 +99,35 @@
       </div>
     </section>
 
-    <section class="history-section">
+    <!-- Recent Colors -->
+    <section class="section">
       <h2>Recent Colors</h2>
-      <div class="history-list" id="historyList">
+      <div class="history-grid" id="historyList">
         <p class="empty-state">No colors picked yet</p>
       </div>
     </section>
 
-    <footer class="shortcuts">
+    <!-- Keyboard Shortcuts -->
+    <div class="shortcuts">
       <div class="shortcut"><kbd>Alt</kbd>+<kbd>C</kbd> Eyedropper</div>
       <div class="shortcut"><kbd>Alt</kbd>+<kbd>P</kbd> Palette</div>
+    </div>
+
+    <!-- Footer Links -->
+    <footer class="footer">
+      <a href="#" class="btn btn-coffee" id="coffeeBtn">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M18 8h1a4 4 0 010 8h-1M2 8h16v9a4 4 0 01-4 4H6a4 4 0 01-4-4V8zM6 1v3M10 1v3M14 1v3"></path>
+        </svg>
+        Buy Me a Coffee
+      </a>
+      <a href="#" class="btn btn-secondary" id="landingBtn">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"></path>
+          <polyline points="9 22 9 12 15 12 15 22"></polyline>
+        </svg>
+        Website
+      </a>
     </footer>
   </div>
   <script src="popup.js"></script>
