feat: Add manual eyedropper and palette trigger buttons to the popup, update default keyboard shortcuts, and provide an Opera shortcuts link in options.

--- a/options.html
+++ b/options.html
@@ -65,7 +65,11 @@
                             <line x1="12" y1="16" x2="12" y2="12"></line>
                             <line x1="12" y1="8" x2="12" y2="8"></line>
                         </svg>
-                        To change shortcuts, go to <a href="#" id="chromeShortcuts">chrome://extensions/shortcuts</a>
+                        <span>
+                            Manage shortcuts:
+                            <a href="#" id="chromeShortcuts">Chrome</a> |
+                            <a href="#" id="operaShortcuts">Opera</a>
+                        </span>
                     </p>
                 </div>
             </section>
