feat: Implement a true pixel eyedropper using screenshot capture in the background script, a magnifier and color preview in the content script, and integrate popup controls.

--- a/options.html
+++ b/options.html
@@ -46,7 +46,7 @@
                             <span class="shortcut-desc">Pick a single color from the page</span>
                         </div>
                         <div class="shortcut-keys">
-                            <kbd>Alt</kbd> + <kbd>C</kbd>
+                            <kbd>Alt</kbd> + <kbd>PageUp</kbd>
                         </div>
                     </div>
                     <div class="shortcut-row">
@@ -55,7 +55,7 @@
                             <span class="shortcut-desc">Extract 3-color palette from selection</span>
                         </div>
                         <div class="shortcut-keys">
-                            <kbd>Alt</kbd> + <kbd>P</kbd>
+                            <kbd>Alt</kbd> + <kbd>PageDown</kbd>
                         </div>
                     </div>
                     <p class="shortcut-note">
@@ -161,7 +161,7 @@
                     <h2>About</h2>
                 </div>
                 <div class="card-content about-content">
-                    <p>ColorCheck v1.0.0</p>
+                    <p>ColorCheck v2.0.0</p>
                     <p class="about-desc">Eyedropper and palette extractor for web designers</p>
                     <div class="about-links">
                         <a href="#" class="btn btn-coffee" id="coffeeBtn">
