--- a/popup.html
+++ b/popup.html
@@ -37,13 +37,6 @@
       </div>
     </header>
 
-    <!-- Format Toggle -->
-    <div class="format-toggle">
-      <button class="format-btn active" data-format="hex">HEX</button>
-      <button class="format-btn" data-format="rgb">RGB</button>
-      <button class="format-btn" data-format="hsl">HSL</button>
-    </div>
-
     <!-- Manual Triggers -->
     <div class="manual-triggers">
       <button class="btn btn-primary trigger-btn" id="startEyedropper">
@@ -138,25 +131,24 @@
 
     <!-- Keyboard Shortcuts -->
     <div class="shortcuts">
-      <div class="shortcut"><kbd>Alt</kbd>+<kbd>C</kbd> Eyedropper</div>
-      <div class="shortcut"><kbd>Alt</kbd>+<kbd>P</kbd> Palette</div>
+      <div class="shortcut" id="popupEyedropperShortcut">Loading...</div>
+      <div class="shortcut" id="popupPaletteShortcut">Loading...</div>
     </div>
 
-    <!-- Footer Links -->
+    <!-- Footer -->
     <footer class="footer">
-      <a href="#" class="btn btn-coffee" id="coffeeBtn">
-        <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M18 8h1a4 4 0 010 8h-1M2 8h16v9a4 4 0 01-4 4H6a4 4 0 01-4-4V8zM6 1v3M10 1v3M14 1v3"></path>
+      <a href="#" class="icon-btn coffee-btn" id="coffeeBtn" title="Support: Buy Me a Coffee">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M18 8h1a4 4 0 010 8h-1"></path>
+          <path d="M2 8h16v9a4 4 0 01-4 4H6a4 4 0 01-4-4V8z"></path>
+          <line x1="6" y1="1" x2="6" y2="4"></line>
+          <line x1="10" y1="1" x2="10" y2="4"></line>
+          <line x1="14" y1="1" x2="14" y2="4"></line>
         </svg>
-        Buy Me a Coffee
       </a>
-      <a href="#" class="btn btn-secondary" id="landingBtn">
-        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"></path>
-          <polyline points="9 22 9 12 15 12 15 22"></polyline>
-        </svg>
-        Website
-      </a>
+      <div class="brand-footer">
+        <span>by Mellow Solutions</span>
+      </div>
     </footer>
   </div>
   <script src="popup.js"></script>
