feat: Add a second triadic accent color display and a clickable brand link to the popup UI.

--- a/popup.html
+++ b/popup.html
@@ -101,7 +101,27 @@
         <div class="swatch" id="accentSwatch" data-role="accent">
           <div class="swatch-color"></div>
           <div class="swatch-info">
-            <span class="swatch-label">Accent</span>
+            <span class="swatch-label">Accent 1</span>
+            <span class="swatch-value">--</span>
+          </div>
+          <button class="icon-btn favorite-btn" title="Add to favorites">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <polygon
+                points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+              </polygon>
+            </svg>
+          </button>
+          <button class="icon-btn copy-btn" title="Copy">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+              <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
+            </svg>
+          </button>
+        </div>
+        <div class="swatch" id="accent2Swatch" data-role="accent2">
+          <div class="swatch-color"></div>
+          <div class="swatch-info">
+            <span class="swatch-label">Accent 2</span>
             <span class="swatch-value">--</span>
           </div>
           <button class="icon-btn favorite-btn" title="Add to favorites">
@@ -147,7 +167,7 @@
         </svg>
       </a>
       <div class="brand-footer">
-        <span>by Mellow Solutions</span>
+        <a href="#" id="brandLinkPopup" class="brand-link">by Mellow Solutions</a>
       </div>
     </footer>
   </div>
