--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,15 @@
         <h1 class="gradient-text">ColorCheck</h1>
       </div>
       <div class="header-actions">
+        <a href="#" class="icon-btn coffee-btn" id="coffeeBtn" title="Support: Buy Me a Coffee">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M18 8h1a4 4 0 010 8h-1"></path>
+            <path d="M2 8h16v9a4 4 0 01-4 4H6a4 4 0 01-4-4V8z"></path>
+            <line x1="6" y1="1" x2="6" y2="4"></line>
+            <line x1="10" y1="1" x2="10" y2="4"></line>
+            <line x1="14" y1="1" x2="14" y2="4"></line>
+          </svg>
+        </a>
         <button class="icon-btn" id="themeToggle" title="Toggle Dark Mode">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <circle cx="12" cy="12" r="5"></circle>
@@ -40,13 +49,13 @@
     <!-- Manual Triggers -->
     <div class="manual-triggers">
       <button class="btn btn-primary trigger-btn" id="startEyedropper">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M12 21.7C17.3 17 20 13 20 10a8 8 0 1 0-16 0c0 3 2.7 7 8 11.7z" />
         </svg>
         Pick Color
       </button>
       <button class="btn btn-secondary trigger-btn" id="startPalette">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
           <path d="M3 9h18M9 21V9" />
         </svg>
@@ -56,7 +65,7 @@
 
     <!-- Current Palette -->
     <section class="section">
-      <h2>Current Palette</h2>
+      <h2>Palette</h2>
       <div class="palette" id="currentPalette">
         <div class="swatch" id="primarySwatch" data-role="primary">
           <div class="swatch-color"></div>
@@ -65,14 +74,14 @@
             <span class="swatch-value">--</span>
           </div>
           <button class="icon-btn favorite-btn" title="Add to favorites">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <polygon
                 points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
               </polygon>
             </svg>
           </button>
           <button class="icon-btn copy-btn" title="Copy">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
             </svg>
@@ -85,14 +94,14 @@
             <span class="swatch-value">--</span>
           </div>
           <button class="icon-btn favorite-btn" title="Add to favorites">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <polygon
                 points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
               </polygon>
             </svg>
           </button>
           <button class="icon-btn copy-btn" title="Copy">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
             </svg>
@@ -105,14 +114,14 @@
             <span class="swatch-value">--</span>
           </div>
           <button class="icon-btn favorite-btn" title="Add to favorites">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <polygon
                 points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
               </polygon>
             </svg>
           </button>
           <button class="icon-btn copy-btn" title="Copy">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
             </svg>
@@ -125,14 +134,14 @@
             <span class="swatch-value">--</span>
           </div>
           <button class="icon-btn favorite-btn" title="Add to favorites">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <polygon
                 points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
               </polygon>
             </svg>
           </button>
           <button class="icon-btn copy-btn" title="Copy">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"></path>
             </svg>
@@ -143,32 +152,15 @@
 
     <!-- Recent Colors -->
     <section class="section">
-      <h2>Recent Colors</h2>
+      <h2>Recent</h2>
       <div class="history-grid" id="historyList">
         <p class="empty-state">No colors picked yet</p>
       </div>
     </section>
 
-    <!-- Keyboard Shortcuts -->
-    <div class="shortcuts">
-      <div class="shortcut" id="popupEyedropperShortcut">Loading...</div>
-      <div class="shortcut" id="popupPaletteShortcut">Loading...</div>
-    </div>
-
     <!-- Footer -->
     <footer class="footer">
-      <a href="#" class="icon-btn coffee-btn" id="coffeeBtn" title="Support: Buy Me a Coffee">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M18 8h1a4 4 0 010 8h-1"></path>
-          <path d="M2 8h16v9a4 4 0 01-4 4H6a4 4 0 01-4-4V8z"></path>
-          <line x1="6" y1="1" x2="6" y2="4"></line>
-          <line x1="10" y1="1" x2="10" y2="4"></line>
-          <line x1="14" y1="1" x2="14" y2="4"></line>
-        </svg>
-      </a>
-      <div class="brand-footer">
-        <a href="#" id="brandLinkPopup" class="brand-link">by Mellow Solutions</a>
-      </div>
+      <a href="#" id="brandLinkPopup" class="brand-link">by Mellow Solutions</a>
     </footer>
   </div>
   <script src="popup.js"></script>
