feat: Implement accent color analysis mode with a UI toggle and dynamic swatch labels.

--- a/popup.html
+++ b/popup.html
@@ -46,6 +46,12 @@
       </div>
     </header>
 
+    <!-- Mode Toggle -->
+    <div class="mode-toggle">
+      <button class="mode-btn active" id="modePalette" data-mode="palette">Palette</button>
+      <button class="mode-btn" id="modeAccent" data-mode="accent">Accent</button>
+    </div>
+
     <!-- Manual Triggers -->
     <div class="manual-triggers">
       <button class="btn btn-primary trigger-btn" id="startEyedropper">
