feat: Enhance mode toggle UI styling and placement, and enable palette mouse handlers for accent mode.

--- a/popup.html
+++ b/popup.html
@@ -46,12 +46,6 @@
       </div>
     </header>
 
-    <!-- Mode Toggle -->
-    <div class="mode-toggle">
-      <button class="mode-btn active" id="modePalette" data-mode="palette">Palette</button>
-      <button class="mode-btn" id="modeAccent" data-mode="accent">Accent</button>
-    </div>
-
     <!-- Manual Triggers -->
     <div class="manual-triggers">
       <button class="btn btn-primary trigger-btn" id="startEyedropper">
@@ -67,6 +61,14 @@
         </svg>
         Extract Palette
       </button>
+    </div>
+
+    <!-- Mode Toggle -->
+    <div class="mode-toggle-container">
+      <div class="mode-toggle">
+        <button class="mode-btn active" id="modePalette" data-mode="palette">Palette</button>
+        <button class="mode-btn" id="modeAccent" data-mode="accent">Accent</button>
+      </div>
     </div>
 
     <!-- Current Palette -->
